--- a/main.tex
+++ b/main.tex
@@ -13,17 +13,8 @@
 \graphicspath{{tex/img/}} % Katalog z obrazkami.
 \addbibresource{bibliografia.bib} % Plik .bib z bibliografią
 
-%-------------------------------------------------------------
-% Wybór wydziału:
-%  \facultyeiti: Wydział Elektroniki i Technik Informacyjnych
-%  \facultymeil: Wydział Mechaniczny Energetyki i Lotnictwa
-% --
-% Rodzaj pracy: \EngineerThesis, \MasterThesis
-% --
-% Wybór języka: \langpol, \langeng
-%-------------------------------------------------------------
 \facultyeiti    % Wydział Elektroniki i Technik Informacyjnych
-\EngineerThesis % Praca inżynierska
+\MasterThesis % Praca inżynierska
 \langpol % Praca w języku polskim
 
 \begin{document}
@@ -31,46 +22,37 @@
 %------------------
 % Strona tytułowa
 %------------------
-\instytut{XXXXXX}
-\kierunek{XXXXXX}
-\specjalnosc{XXXXXX}
+\instytut{Instytut telekomunikacji}
+\kierunek{Telekomunikacja}
+\specjalnosc{Teleinformatyka i Zarządzanie w Telekomunikacji}
 \title{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
+    Sworzenie platformy do modelowania i uruchamiania zamkniętych pętli sterowania w Kubernetes
 }
-% Title in English for English theses
-% In English theses, you may remove this command
 \engtitle{
-    Unnecessarily long and complicated thesis' title \\
-    difficult to read, understand and pronounce
+    Creation of a platform for designing and running closed control loops in Kubernetes
 }
-% Title in Polish for English theses
-% Use it only in English theses
-\poltitle{
-    Niepotrzebnie długi i skomplikowany tytuł pracy \\
-    trudny do przeczytania, zrozumienia i wymówienia
-}
-\author{\{Imię i Nazwisko\}}
-\album{XXXXXX}
-\promotor{XXXXXX}
+
+\author{Andrzej Gawor}
+\album{300528}
+\promotor{dr inż. Dariusz Bursztynowski}
 \date{\the\year}
 \maketitle
 
 %-------------------------------------
-% Streszczenie po polsku dla \langpol
-% English abstract if \langeng is set
+% Streszczenie po polsku 
 %-------------------------------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
-\abstract \lipsum[1-3]
-\keywords XXX, XXX, XXX
+\abstract
+\input{tex/abstract/pl.tex}
+\keywords Zamknięte pętle sterowania, Kubernetes, Zarządzanie sieciami telekomunikacyjnymi, Automatyzacja, Go, Open5GS, Mikroserwisy
 
 %----------------------------------------
-% Streszczenie po angielsku dla \langpol
-% Polish abstract if \langeng is set
+% Streszczenie po angielsku
 %----------------------------------------
 \clearpage
-\secondabstract \kant[1-3]
-\secondkeywords XXX, XXX, XXX
+\secondabstract
+\input{tex/abstract/eng.tex}
+\secondkeywords Closed Control Loops, Kubernetes, Managing Telco-Networks, Automation, Go, Open5GS, Microservices
 
 \pagestyle{plain}
 
