--- a/tex/abstract/pl.tex
+++ b/tex/abstract/pl.tex
@@ -1,1 +1,3 @@
-Projekt opisany w niniejszej pracy skupia się na zaproponowaniu oraz zaimplementowaniu reużywalnej architektury (zwanej dalej "Platformą"), która pozwala na modelowanie oraz uruchamianie zamkniętych pętli sterowania w Kubernetes. Genezą projektu jest praca jednego z komitetów ETSI o nazwie "ENI - Experiential Networked Intelligence", która skupia się na ułatwieniu pracy operatora sieci telekomunikacyjnych wykorzystując mechanizmy sztucznej inteligencji w zamkniętych pętlach sterowania opartych na politykach, które są sterowanie metadanymi oraz świadome kontekstu. ENI w jednym ze swoich dokumentów dokonuje przeglądu zamkniętych pętli sterowania znanych ludzkości z innych dziedzin. Naturalnym następnym krokiem jest zapropowanie platformy, na której operator mógłby takowe pętle projektować oraz uruchamiać. W tym celu zdefiniowanio zestaw wymagań oraz założeń dla takiego systemu. Jako środowisko uruchomieniowe wybrano  Kubernetes z racji, że jest to system dobrze znany w społeczności oraz sam natywnie używa zamkniętych pętli sterowania. Nastpęnie przeprowadzono obszerną analizę jak za pomocą mechanizmów rozszerzania Kubernetes takich jak "Custom Resources" oraz "Operator" pattern można stworzyć framework umożliwiający modelowanie zamkniętych pętli sterowania. Praca opisuje powstałą platformę, jej architekturę, semantykę składni w definiowanych obiektach, zasady działania, integracje z zewnętrznymi systemami wraz z instrukcją jej użycia. Omówiona została również implemtacja platformy, technologie za nią stojące oraz decyzje podjęte podczas jej powstawania. Finalnie przedstawiono również test działania platformy w praktyce wykorzystując do tego emulator systemu 5G jakim jest Open5GS w połączeniu z UERANSIM. Pracę podsumuję lista wniosków oraz potencjalnych rozszerzeń lub poprawek platformy. 
+Projekt opisany w niniejszej pracy skupia się na zaproponowaniu oraz zaimplementowaniu reużywalnej architektury (zwanej dalej "Platformą"), która pozwala na modelowanie oraz uruchamianie zamkniętych pętli sterowania w Kubernetes. Genezą projektu jest praca jednego z komitetów ETSI o nazwie "ENI - Experiential Networked Intelligence", która skupia się na ułatwieniu pracy operatora sieci telekomunikacyjnych wykorzystując mechanizmy sztucznej inteligencji w zamkniętych pętlach sterowania. ENI w jednym ze swoich dokumentów dokonuje przeglądu zamkniętych pętli sterowania znanych ludzkości z innych dziedzin. 
+
+Naturalnym następnym krokiem jest zapropowanie platformy, na której operator mógłby takowe pętle projektować oraz uruchamiać. W tym celu zdefiniowanio zestaw wymagań oraz założeń dla takiego systemu. Jako środowisko uruchomieniowe wybrano  Kubernetes z racji, że jest to system dobrze znany w społeczności oraz sam natywnie używa zamkniętych pętli sterowania. Następnie przeprowadzono obszerną analizę jak za pomocą mechanizmów rozszerzania Kubernetes takich jak "Custom Resources" oraz "Operator" pattern można stworzyć framework umożliwiający modelowanie zamkniętych pętli sterowania. Praca opisuje powstałą platformę, jej architekturę, semantykę składni w definiowanych obiektach, zasady działania, integracje z zewnętrznymi systemami oraz instrukcję jej użytkowania. Omówiona została również implemtacja platformy, technologie za nią stojące oraz decyzje podjęte podczas jej powstawania. Finalnie przedstawiono również test działania platformy w praktyce wykorzystując do tego emulator systemu 5G jakim jest Open5GS w połączeniu z UERANSIM. Pracę podsumuję lista wniosków oraz potencjalnych dróg rozwoju platformy. 
