--- a/main.tex
+++ b/main.tex
@@ -68,15 +68,7 @@
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \pagestyle{headings}
 
-\input{tex/1-wstep}         % Wygodnie jest trzymać każdy rozdział w osobnym pliku.
-\input{tex/2-de-finibus}    % Umożliwia to również łatwą migrację do nowej wersji szablonu:
-\input{tex/3-code-listings} % zazwyczaj wystarczy podmienić plik src/wut-thesis.cls
-
- % Można też pisać rozdziały w jednym pliku.
-\clearpage % Zawsze zaczynamy rozdział od nowej strony
-\section{Summatio}
-\lipsum[4-10]
-
+\input{tex/1-wstep/main.tex} 
 %---------------
 % Bibliografia
 %---------------
