--- a/main.tex
+++ b/main.tex
@@ -67,72 +67,33 @@
 %------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \pagestyle{headings}
-
 \input{tex/1-wstep/main.tex} 
+
 %---------------
-% Bibliografia
+% Literatura
 %---------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \printbibliography
 \clearpage
 
-% Wykaz symboli i skrótów.
-% Pamiętaj, żeby posortować symbole alfabetycznie
-% we własnym zakresie. Makro \acronymlist
-% generuje właściwy tytuł sekcji, w zależności od języka.
-% Makro \acronym dodaje skrót/symbol do listy,
-% zapewniając podstawowe formatowanie.
-\acronymlist
-\acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
-\acronym{PW}{Politechnika Warszawska}
-\acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
-\vspace{0.8cm}
+
 
 %--------------------------------------
-% Spisy: rysunków, tabel, załączników
+% Spisy
 %--------------------------------------
+\newpage
 \pagestyle{plain}
+\input{tex/util/acronym-list.tex}
 
 \listoffigurestoc    % Spis rysunków.
 \vspace{1cm}         % vertical space
 \listoftablestoc     % Spis tabel.
-\vspace{1cm}         % vertical space
+\vspace{1cm}         
 \listofappendicestoc % Spis załączników
 
 %-------------
 % Załączniki
 %-------------
-
-% Obrazki i tabele w załącznikach nie trafiają do spisów
-\captionsetup[figure]{list=no}
-\captionsetup[table]{list=no}
-
-% Załącznik 1
-\clearpage
-\appendix{Nazwa załącznika 1}
-\lipsum[1-3]
-\begin{figure}[!h]
-	\centering \includegraphics[width=0.5\linewidth]{logopw2.png}
-	\caption{Obrazek w załączniku.}
-\end{figure}
-\lipsum[4-7]
-
-% Załącznik 2
-\clearpage
-\appendix{Nazwa załącznika 2}
-\lipsum[1-2]
-\begin{table}[!h] \centering
-    \caption{Tabela w załączniku.}
-    \begin{tabular} {| c | c | r |} \hline
-        Kolumna 1       & Kolumna 2 & Liczba \\ \hline\hline
-        cell1           & cell2     & 60     \\ \hline
-        \multicolumn{2}{|r|}{Suma:} & 123,45 \\ \hline
-    \end{tabular}
-\end{table}
-\lipsum[3-4]
-
-% Używając powyższych spisów jako szablonu,
-% możesz dodać również swój własny wykaz,
-% np. spis algorytmów.
+\input{tex/appendix/main.tex}
 
 \end{document} % Dobranoc.
