--- a/tex/appendix/main.tex
+++ b/tex/appendix/main.tex
@@ -2,3 +2,5 @@
 % Obrazki i tabele w załącznikach nie trafiają do spisów
 \captionsetup[figure]{list=no}
 \captionsetup[table]{list=no}
+
+\input{tex/appendix/1-definicje.tex}
