--- a/tex/util/acronym-list.tex
+++ b/tex/util/acronym-list.tex
@@ -1,4 +1,4 @@
 \vspace{0.8cm}
 \acronymlist
-\acronym{5GC}{5G Core Network}
-\acronym{5GS}{5G System}
+\acronym{ETSI}{Europen Telecommunications Standards Institute}
+\acronym{ENI}{Experiential Networked Intelligence}
