--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,6 +1,12 @@
 % Specyfikacja techniczna.
-@manual{enioverview,
+@misc{enioverview,
     title        = {ETSI GR ENI 017 - "Experiental Networked Intelligence (ENI); Overview of Prominent Closed Control Loops Architectures"},
     howpublished = {Dostęp zdalny (24.01.2025): \url{https://www.etsi.org/deliver/etsi_gr/ENI/001_099/017/02.02.01_60/gr_ENI017v020201p.pdf}},
     year         = {2024}
+}
+
+@misc{eniterminology,
+    title        = {ETSI GR ENI 004 - "Experiental Networked Intelligence (ENI); Terminology"},
+    howpublished = {Dostęp zdalny (24.01.2025): \url{https://www.etsi.org/deliver/etsi_gr/ENI/001_099/004/03.01.01_60/gr_ENI004v030101p.pdf}},
+    year         = {2023}
 }
