--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -10,3 +10,24 @@
     howpublished = {Dostęp zdalny (24.01.2025): \url{https://www.etsi.org/deliver/etsi_gr/ENI/001_099/004/03.01.01_60/gr_ENI004v030101p.pdf}},
     year         = {2023}
 }
+% Tu jest o OODA
+@misc{boyd,
+    title        = {John R. Boyd - "The Essence of Winning and Losing"},
+    howpublished = {Dostęp zdalny (24.01.2025): https://slightlyeastofnew.com/wp-content/uploads/2010/03/essence_of_winning_losing.pdf},
+    year         = {1995}
+}
+% Tu jest o MAPE-K
+@misc{ibm,
+    title       = {IBM Whitepaper - "An architectural blueprint for autonomic computing."},
+    howpublished = {Dostęp zdalny (24.01.2025): https://users.cs.fiu.edu/~sadjadi/Teaching/Autonomic%20Grid%20Computing/CIS-6612-Summer-2006/AC-Blueprint-WhitePaper-V7.pdf},
+    year         = {2005}
+}
+
+% tu jest o Focale
+@book{nazim, 
+    author    = {Nazim Agoulmine},
+    title     = {Autonomic Network Management Principles},
+    publisher = {Elsevier},
+    address   = {30 Corporate Drive, Suite 400, Burlington, MA 01803, USA},
+    year      = {2011}
+}
