--- a/tex/2-stan-wiedzy/2-historia.tex
+++ b/tex/2-stan-wiedzy/2-historia.tex
@@ -4,7 +4,7 @@ Na początku XX wieku, gdy sieci telekomunikacyjne dopiero się rozwijały, wszy
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{telefonistki.jpg}
-    \caption{Pracowniczki warszawskiej centrali telefonicznej na zdjęciu z końca lat 20. (domena publiczna).}\label{fig:telefonistki}
+    \caption{Pracowniczki warszawskiej centrali telefonicznej z końca lat 20. XX wieku}\label{fig:telefonistki}
 \end{figure}
 
 Dziś taki scenariusz wydaje się wręcz absurdalny, a oferty pracy dla telefonistek dawno już zniknęły z tablic ogłoszeń. Praca wykonywana przez telefonistki (czyli komutacja łączy) nadal jest potrzebna do prawidłowego funkcjonowania sieci telekomunikacyjnych, lecz wykonywana jest przez programy komputerowe w sposób w pełni zautomatyzowany. Ręczna komutacja była pierwszym krokiem w kierunku rozwoju globalnych sieci telekomunikacyjnych i choć z dzisiejszej perspektywy wydaje się być bardzo pracochłonna i ograniczająca, bez niej nie powstałyby fundamenty, na których oparto późniejsze systemy automatyczne. Jest to przykład tego, jak technologia stopniowo uwalniała człowieka od bezpośredniej obsługi różnych systemów (dając mu przestrzeń na rózwój w innych obszarach). 
