--- a/tex/2-stan-wiedzy/4-przeglad.tex
+++ b/tex/2-stan-wiedzy/4-przeglad.tex
@@ -1,6 +1,6 @@
 \subsection{Przegląd obiecujących pętli sterowania}
 
-Przedstawione w poprzedniej sekcji architektura jest jedynie funkcjonalna i zawiera w sobie dużo abstrakcji. Ostateczna postać wewnętrznej zamkniętej pętli sterowania w ENI system jest jeszcze w trakcie specyfikacji. ENI w dokumencie \cite{enioverview} dokonało przeglądu istniejących, możliwych do zaaplikowania architektur zamkniętych pętli sterowania. Niniejsza praca dyplomowa chce zaproponować architekturę do modelowania oraz uruchamiania pętli w ENI System, dlatego ważne jest, aby poznać jej składowe elementy. Nie mamy na celu rozważać dokładnej funkcjonalności tych w środku tych elementów, jedynie poznać ich interfejsy, abyśmy wiedzieli co jako platforma uruchomieniowa powinniśmy być w stanie im zapewnić. 
+Przedstawiona w poprzedniej sekcji architektura jest jedynie funkcjonalna i zawiera w sobie dużo abstrakcji. Ostateczna postać wewnętrznej zamkniętej pętli sterowania w ENI system jest jeszcze w trakcie specyfikacji. ENI w dokumencie \cite{enioverview} dokonało przeglądu istniejących, możliwych do zaaplikowania architektur zamkniętych pętli sterowania. Niniejsza praca dyplomowa chce zaproponować architekturę do modelowania oraz uruchamiania pętli w ENI System, dlatego ważne jest, aby poznać jej składowe elementy. Nie mamy na celu rozważać dokładnej funkcjonalności tych w środku tych elementów, jedynie poznać ich interfejsy, abyśmy wiedzieli co jako platforma uruchomieniowa powinniśmy być w stanie im zapewnić. 
 
 // Opis wyżej powinien być we wstępie tego rozdziału.
 
