fix: one of many

--- a/tex/2-stan-wiedzy/3-eni.tex
+++ b/tex/2-stan-wiedzy/3-eni.tex
@@ -23,4 +23,4 @@ Polityki mogą płynąć od: aplikacji zarządzających siecią, użytkowników 
     \caption{Wysokopoziomowa architektura funkcjonalna ENI}\label{fig:23-eni-arch}
 \end{figure}
 
-Wysokopoziomową architekturę funkcjonalną ENI pokazano na rycinie \ref{fig:23-eni-arch}. Jej działanie można opisać jako dwie \textit{zamknięte pętle sterowania}. Za pomocą zewnętrznej, system zarządzania (użytkownik, OSS/BSS, orkiestrator) reguluje pracę sieci (infrastruktury). Dokonuje tego nie bezpośrednio, lecz za pomocą ENI System, który sam wewnętrznie również posiada zamkniętą pętle sterowania. Wewnętrzna pętla podczas wnioskowania bierze pod uwagę nie tylko wiedzę płynącą bezpośrednio z sieci, ale również tę od orkiestratora. Wszystkie komponenty odpowiedzialne za sztuczną inteligencję są umieszczone na rycinie w zielonym prostokącie i stanowią \textit{workflow} wewnętrznej pętli. 
+Wysokopoziomową architekturę funkcjonalną ENI pokazano na rysunku \ref{fig:23-eni-arch}. Jej działanie można opisać jako dwie \textit{zamknięte pętle sterowania}. Za pomocą zewnętrznej, system zarządzania (użytkownik, OSS/BSS, orkiestrator) reguluje pracę sieci (infrastruktury). Dokonuje tego nie bezpośrednio, lecz za pomocą ENI System, który sam wewnętrznie również posiada zamkniętą pętle sterowania. Wewnętrzna pętla podczas wnioskowania bierze pod uwagę nie tylko wiedzę płynącą bezpośrednio z sieci, ale również tę od orkiestratora. Wszystkie komponenty odpowiedzialne za sztuczną inteligencję są umieszczone na rysunku \ref{fig:23-eni-arch} w zielonym prostokącie i stanowią \textit{workflow} wewnętrznej pętli. 
