--- a/tex/2-stan-wiedzy/1-wstep.tex
+++ b/tex/2-stan-wiedzy/1-wstep.tex
@@ -1,3 +1,3 @@
 \subsection{Wstęp}
 
-Elo elo 320.
+Sekcja ta stanowi krótki wstęp historyczny problemu jakiego podjęło się ENI, prezentuje ich badania relewantne z punktu widzenia pracy oraz zawiera wstęp z Teorii Sterowania - dziedziny, która zajmuje się zamkniętymi pętlami sterowania. 
