--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,8 @@
 \cleardoublepage 
 \pagestyle{headings}
 \input{tex/1-wstep/main.tex}
-\input{tex/2-stan-wiedzy/main.tex} 
+\input{tex/2-stan-wiedzy/main.tex}
+\input{tex/3-architektura/main.tex}
 
 %---------------
 % Literatura
