--- a/tex/2-stan-wiedzy/4-przeglad.tex
+++ b/tex/2-stan-wiedzy/4-przeglad.tex
@@ -1,4 +1,4 @@
-\subsection{Przegląd obiecujących pętli sterowania}
+\subsection{Przegląd pętli sterowania}
 
 Przedstawiona w poprzedniej sekcji architektura jest jedynie funkcjonalna i zawiera w sobie dużo abstrakcji. Ostateczna postać wewnętrznej zamkniętej pętli sterowania w ENI system jest jeszcze w trakcie specyfikacji. ENI w dokumencie \cite{enioverview} dokonało przeglądu istniejących, możliwych do zaaplikowania architektur zamkniętych pętli sterowania. Niniejsza praca dyplomowa chce zaproponować architekturę do modelowania oraz uruchamiania pętli w ENI System, dlatego ważne jest, aby poznać jej składowe elementy oraz \textit{workflow} przykładowych pętli. Domyślamy się, że konkretne workflow pętli będzie znane dopiero przy konkretnym wdrożeniu ENI System, a wdrożeniu będą różniły się między sobą. 
 
