--- a/tex/3-architektura/2-wymagania-i-zalozenia.tex
+++ b/tex/3-architektura/2-wymagania-i-zalozenia.tex
@@ -19,6 +19,7 @@ Z tego opisu powstaje garść wymagań oraz założeń, które z pewnością nie
     \item \label{req:4} Lupus jest zaimplementowany na bazie Kubernetes, wykorzystując jego \textit{Controller Pattern}.
     \item \label{req:5} Lupus jest oparty na danych (\textit{data-driven}), co oznacza, że nie narzuca i nie ma wbudowanej żadnej domyślnej logiki pętli.
     \item \label{req:6} Faktyczne komponenty przetwarzające w pętli (część obliczeniowa) Lupus są zewnętrzne względem niego (np. serwery HTTP, szczególnie Open Policy Agent).
+    \item \label{reg:7} Lupus powinien być w stanie regulować pracą dowolnego systemu teleinformatycznego bez żadnych jego modyfikacji
 \end{enumerate}
 
-Powyższa lista nazwana jest wymaganiami i referowana w dalszej części dokumentu. 
+Powyższa lista nazwana jest Wymaganiami i referowana w dalszej części dokumentu. 
