--- a/tex/2-stan-wiedzy/3-eni.tex
+++ b/tex/2-stan-wiedzy/3-eni.tex
@@ -18,7 +18,7 @@ Polityki mogą płynąć od: aplikacji zarządzających siecią, użytkowników 
     \item i wiele innych.
 \end{itemize}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering \includegraphics[width=1\linewidth]{23-eni-arch.png}
     \caption{Wysokopoziomowa architektura funkcjonalna ENI}\label{fig:23-eni-arch}
 \end{figure}
