--- a/tex/3-architektura/main.tex
+++ b/tex/3-architektura/main.tex
@@ -2,3 +2,4 @@
 
 \input{tex/3-architektura/1-wstep.tex}
 \input{tex/3-architektura/2-wymagania-i-zalozenia.tex}
+\input{tex/3-architektura/3-pojecia-i-zasady.tex}
